import javax.swing.JEditorPane;

public class Vue extends JEditorPane {

}
