@startuml OrgaVue

class IHM {

}

abstract class Vue {

}

interface AfficheurFiche {

}

class PopUpOpenFiche {

}


class RevEasy {

}

Vue --o "4" IHM


Welcome --|> Vue
Edition --|> Vue
Consultation --|> Vue
Reviser --|> Vue
MenuLateral --> Edition
MenuLateral --> Consultation
MenuLateral --> Reviser
AfficheurFiche ..|> Reviser
Reviser --> PopUpOpenFiche
AfficheurFiche <.. PopUpOpenFiche

IHM --> RevEasy

note "Interface de marquage permettant \nd'utiliser PopUpOpenFiche" as N1

N1 .. AfficheurFiche